# article-management-system

./: .env.docker  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
articles/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_status.py  0003_auto_20250711_0928.py  0004_article_creator.py  0005_alter_userprofile_managers_alter_article_title_and_more.py
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: provider.html
templates/allauth/layouts/: base.html
templates/articles/: article_create.html  article_delete.html  article_update.html  base.html  create_article.html  delete_article.html  home.html  update_article.html
templates/articles/layouts/: base_form.html
wordly/: asgi.py  settings.py  urls.py  wsgi.py
