[project]
name = "wordly"
version = "0.1.0"
description = "A Django-based article publishing platform"
authors = [
    {name = "krishnakamith",email = "krishnakamith@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-allauth[socialaccount] (>=65.10.0,<66.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"
django-browser-reload = "^1.18.0"

